[package]
name = "bevy-jam-7"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: trim unused features
avian2d = "0.5.0"
# TODO: remove dynamic_linking for release build
bevy = { version = "0.18.0", features = ["debug", "dynamic_linking"] }
bevy_enhanced_input = "0.23.2"
exhaust = "0.2.2"
itertools = "0.14.0"
rand = { version = "0.10.0", default-features = false, features = ["thread_rng"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
