[package]
name = "bevy-jam-7"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# TODO: trim unused features
avian2d = "0.5.0"
# note: dynamic_linking seems to do no harm to the size or perf of the web build, so leaving it on
bevy = { version = "0.18.0", features = ["dynamic_linking"] }
bevy_asset_loader = "0.25.0"
bevy_enhanced_input = "0.23.2"
exhaust = "0.2.2"
indoc = "2.0.1"
itertools = "0.14.0"
rand = { version = "0.10.0", default-features = false, features = ["thread_rng"] }
rand_distr = { version = "0.6.0", default-features = false }
getrandom = { version = "0.4.1", features = ["wasm_js"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
